implement basic commands: up, down, status, ssh, logs

--- a/crates/firecracker-up/Cargo.toml
+++ b/crates/firecracker-up/Cargo.toml
@@ -13,3 +13,5 @@ firecracker-prepare = { path = "../firecracker-prepare" }
 firecracker-process = { path = "../firecracker-process" }
 clap = "4.5.41"
 owo-colors = "4.2.2"
+glob = "0.3.2"
+dirs = "6.0.0"
