--- a/crates/firecracker-prepare/Cargo.toml
+++ b/crates/firecracker-prepare/Cargo.toml
@@ -8,6 +8,7 @@ repository.workspace = true
 
 [dependencies]
 anyhow = "1.0.98"
+dirs = "6.0.0"
 libc = "0.2.174"
 owo-colors = "4.2.2"
 regex = "1.11.1"
