--- a/crates/firecracker-vm/Cargo.toml
+++ b/crates/firecracker-vm/Cargo.toml
@@ -8,6 +8,7 @@ repository.workspace = true
 
 [dependencies]
 anyhow = "1.0.98"
+dirs = "6.0.0"
 glob = "0.3.2"
 libc = "0.2.174"
 num_cpus = "1.17.0"
