--- a/crates/firecracker-vm/Cargo.toml
+++ b/crates/firecracker-vm/Cargo.toml
@@ -7,6 +7,7 @@ license.workspace = true
 repository.workspace = true
 
 [dependencies]
+firecracker-prepare = { path = "../firecracker-prepare" }
 anyhow = "1.0.98"
 dirs = "6.0.0"
 glob = "0.3.2"
