--- a/crates/fire-config/Cargo.toml
+++ b/crates/fire-config/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "firecracker-vm"
+name = "fire-config"
 version = "0.1.0"
 authors.workspace = true
 edition.workspace = true
@@ -7,12 +7,10 @@ license.workspace = true
 repository.workspace = true
 
 [dependencies]
+serde = { version = "1.0.219", features = ["derive", "serde_derive"] }
+serde_yml = "0.0.12"
+toml = "0.9.4"
 firecracker-prepare = { path = "../firecracker-prepare" }
-fire-config = { path = "../fire-config" }
-anyhow = "1.0.98"
-dirs = "6.0.0"
-glob = "0.3.2"
-libc = "0.2.174"
 num_cpus = "1.17.0"
+anyhow = "1.0.98"
 owo-colors = "4.2.2"
-serde_json = "1.0.141"
