--- a/crates/firecracker-prepare/Cargo.toml
+++ b/crates/firecracker-prepare/Cargo.toml
@@ -12,3 +12,4 @@ dirs = "6.0.0"
 libc = "0.2.174"
 owo-colors = "4.2.2"
 regex = "1.11.1"
+serde = { version = "1.0.219", features = ["serde_derive", "derive"] }
