add more command line options: --bridge, --tap, --mac-address, --api-socket

--- a/crates/firecracker-process/Cargo.toml
+++ b/crates/firecracker-process/Cargo.toml
@@ -10,3 +10,4 @@ repository.workspace = true
 anyhow = "1.0.98"
 libc = "0.2.174"
 owo-colors = "4.2.2"
+firecracker-vm = { path = "../firecracker-vm" }
