--- a/crates/firecracker-vm/Cargo.toml
+++ b/crates/firecracker-vm/Cargo.toml
@@ -19,3 +19,5 @@ owo-colors = "4.2.2"
 serde_json = "1.0.141"
 rand = "0.8"
 names = "0.14.0"
+rumqttc = "0.25.0"
+tokio = { version = "1.47.1", features = ["full"] }
