--- a/crates/firecracker-vm/src/systemd/nextdhcp.service
+++ b/crates/firecracker-vm/src/systemd/nextdhcp.service
@@ -1,17 +1,18 @@
-[Unit] 
-Description=NextDHCP Service 
-After=network.target systemd-tmpfiles-setup.service 
+[Unit]
+Description=NextDHCP Service
+After=network.target systemd-tmpfiles-setup.service
 
-[Service] 
-ExecStart=/usr/sbin/nextdhcp -conf /etc/nextdhcp/Dhcpfile 
-Restart=on-failure RestartSec=5 
-LimitNOFILE=65535 
-LimitNPROC=512 
-ProtectSystem=strict 
+[Service]
+ExecStart=/usr/sbin/nextdhcp -conf /etc/nextdhcp/Dhcpfile
+Restart=on-failure
+RestartSec=5
+LimitNOFILE=65535
+LimitNPROC=512
+ProtectSystem=strict
 ReadWritePaths=/etc/nextdhcp
-NoNewPrivileges=true 
+NoNewPrivileges=true
 AmbientCapabilities=CAP_NET_ADMIN CAP_NET_RAW CAP_NET_BIND_SERVICE
 WorkingDirectory=/etc/nextdhcp
 
-[Install] 
+[Install]
 WantedBy=multi-user.target
