fix: update dependencies in Cargo.toml for reqwest support in utoipa-swagger-ui

--- a/crates/fire-server/Cargo.toml
+++ b/crates/fire-server/Cargo.toml
@@ -15,4 +15,4 @@ utoipa = { version = "5.4.0", features = ["actix_extras"] }
 utoipa-actix-web = "0.1.2"
 utoipa-rapidoc = { version = "6.0.0", features = ["actix-web"] }
 utoipa-redoc = { version = "6.0.0", features = ["actix-web"] }
-utoipa-swagger-ui = { version = "9", features = ["actix-web"] }
+utoipa-swagger-ui = { version = "9", features = ["actix-web", "reqwest"] }
