feat: add SSH key change detection and image regeneration for rootfs preparations

--- a/crates/firecracker-prepare/Cargo.toml
+++ b/crates/firecracker-prepare/Cargo.toml
@@ -13,3 +13,4 @@ libc = "0.2.174"
 owo-colors = "4.2.2"
 regex = "1.11.1"
 serde = { version = "1.0.219", features = ["serde_derive", "derive"] }
+sha2 = "0.10.9"
