--- a/crates/fire-server/Cargo.toml
+++ b/crates/fire-server/Cargo.toml
@@ -22,6 +22,7 @@ firecracker-state = { path = "../firecracker-state" }
 firecracker-vm = { path = "../firecracker-vm" }
 firecracker-prepare = { path = "../firecracker-prepare" }
 firecracker-process = { path = "../firecracker-process" }
+fire-config = { path = "../fire-config" }
 serde_json = "1.0.145"
 sqlx = { version = "0.8.6", features = [
   "runtime-tokio",
